@@ -8,6 +8,8 @@ Revelation changelog
 
 	* set about dialog as transient of parent window
 
+	* password generator now always avoids ambiguous characters
+
 2006-02-06  Erik Grinaker <erikg@codepoet.no>
 
 	* don't use deprecated gnome-python modules
